Updated fixtures page for dark mode

--- a/client/src/Components/Layout/NavigationBar.css
+++ b/client/src/Components/Layout/NavigationBar.css
@@ -54,7 +54,7 @@
 }
 
 .nav-links {
-    color: #fff;
+    color: var(--light2);
     display: flex;
     align-items: center;
     text-decoration: none;
